consultancy controller review